# tracdap_testing

./: .gitignore  README.md  pyproject.toml
config/: hello_world.yaml  optional_io.yaml  sys_config.yaml  using_data.yaml
src/tracdap_testing/: __init__.py  hello_world.py  optional_io.py  schema_files.py  using_data.py
src/tracdap_testing/plugins/: external_config.py
src/tracdap_testing/schemas/: customer_loans.csv
